Add more to dummy service

--- a/todo
+++ b/todo
@@ -2,4 +2,4 @@ rename server.c to main.c to reflect it should only have main
 
 move obj directories around for consistency between test and real
 
-Write functions to read 9p messages to and from fds
+It's dumb to do all this in separate processes. I need to swap to threads.
